fixed bug pertaining to overflow

--- a/Stylesheets/styles.css
+++ b/Stylesheets/styles.css
@@ -12,6 +12,7 @@ html{
 }
  body {
     margin: 0;
+    position: relative;
     font-family: Anek Devangari;
     padding-top: 65px;
     overflow-x: hidden;
